<resources>
    <string name="app_name">Inventory App</string>
    <string name="add">Add</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="supplier">Supplier</string>
    <string name="action_delete_all_entries">Delete All Enteries</string>
    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_description">Description</string>
    <string name="action_delete">Delete</string>
    <string name="details">Details</string>
    <string name="category_price">Price</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="unit_item">₹</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving Item</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a new Item</string>
    <string name="editor_update_item_successful">Item Updated</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="order_now">Order Now</string>
    <string name="err">Insertion in not supproted for </string>
    <string name="orderNow">Order Now</string>
    <string name="imageUrl">Image Url</string>
    <string name="imagejpg">Image.jpg</string>
    <string name="addImage">Add Image</string>
</resources>
